--- a/crates/npw-core/Cargo.toml
+++ b/crates/npw-core/Cargo.toml
@@ -6,5 +6,13 @@ license.workspace = true
 rust-version.workspace = true
 
 [dependencies]
+argon2.workspace = true
+chacha20poly1305.workspace = true
+ciborium.workspace = true
+getrandom.workspace = true
+hkdf.workspace = true
 serde.workspace = true
+sha2.workspace = true
+thiserror.workspace = true
 uuid.workspace = true
+zeroize.workspace = true
