--- a/crates/npw-cli/Cargo.toml
+++ b/crates/npw-cli/Cargo.toml
@@ -7,7 +7,13 @@ rust-version.workspace = true
 
 [dependencies]
 anyhow.workspace = true
+ciborium.workspace = true
 clap.workspace = true
+directories.workspace = true
+getrandom.workspace = true
 npw-core = { path = "../npw-core" }
-npw-domain = { path = "../npw-domain" }
 npw-storage = { path = "../npw-storage" }
+rpassword.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+toml.workspace = true
