--- a/crates/npw-core/Cargo.toml
+++ b/crates/npw-core/Cargo.toml
@@ -14,5 +14,6 @@ hkdf.workspace = true
 serde.workspace = true
 sha2.workspace = true
 thiserror.workspace = true
+unicode-normalization.workspace = true
 uuid.workspace = true
 zeroize.workspace = true
