--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ dist-electron/
 *.tsbuildinfo
 .env
 .env.*
+apps/desktop/native/*.node
 
 # === btca ===
 # Local resource clones (created on first btca query)
