--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,16 +21,19 @@ chacha20poly1305 = "0.10.1"
 ciborium = "0.2.2"
 clap = { version = "4.5.53", features = ["derive"] }
 directories = "6.0.0"
+fs2 = "0.4.3"
 getrandom = "0.3.4"
 hkdf = "0.12.4"
 napi = { version = "3.5.2", default-features = false, features = ["napi6"] }
 napi-derive = "3.3.3"
 rpassword = "7.4.0"
 serde = { version = "1.0.228", features = ["derive"] }
+serde_bytes = "0.11.17"
 serde_json = "1.0.145"
 sha2 = "0.10.9"
 thiserror = "2.0.17"
 toml = "0.9.8"
 unicode-normalization = "0.1.25"
+url = "2.5.8"
 uuid = { version = "1.18.1", features = ["serde", "v4"] }
 zeroize = "1.8.2"
