--- a/crates/npw-cli/Cargo.toml
+++ b/crates/npw-cli/Cargo.toml
@@ -7,7 +7,6 @@ rust-version.workspace = true
 
 [dependencies]
 anyhow.workspace = true
-ciborium.workspace = true
 clap.workspace = true
 directories.workspace = true
 getrandom.workspace = true
@@ -17,3 +16,4 @@ rpassword.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 toml.workspace = true
+uuid.workspace = true
