--- a/crates/npw-core/Cargo.toml
+++ b/crates/npw-core/Cargo.toml
@@ -12,8 +12,10 @@ ciborium.workspace = true
 getrandom.workspace = true
 hkdf.workspace = true
 serde.workspace = true
+serde_bytes.workspace = true
 sha2.workspace = true
 thiserror.workspace = true
 unicode-normalization.workspace = true
+url.workspace = true
 uuid.workspace = true
 zeroize.workspace = true
