--- a/crates/npw-core/Cargo.toml
+++ b/crates/npw-core/Cargo.toml
@@ -9,10 +9,13 @@ rust-version.workspace = true
 argon2.workspace = true
 chacha20poly1305.workspace = true
 ciborium.workspace = true
+data-encoding.workspace = true
 getrandom.workspace = true
 hkdf.workspace = true
+hmac.workspace = true
 serde.workspace = true
 serde_bytes.workspace = true
+sha1.workspace = true
 sha2.workspace = true
 thiserror.workspace = true
 unicode-normalization.workspace = true
