--- a/crates/npw-cli/Cargo.toml
+++ b/crates/npw-cli/Cargo.toml
@@ -8,6 +8,8 @@ rust-version.workspace = true
 [dependencies]
 anyhow.workspace = true
 clap.workspace = true
+csv.workspace = true
+data-encoding.workspace = true
 directories.workspace = true
 getrandom.workspace = true
 npw-core = { path = "../npw-core" }
