--- a/crates/npw-cli/Cargo.toml
+++ b/crates/npw-cli/Cargo.toml
@@ -7,6 +7,7 @@ rust-version.workspace = true
 
 [dependencies]
 anyhow.workspace = true
+arboard.workspace = true
 clap.workspace = true
 csv.workspace = true
 data-encoding.workspace = true
@@ -14,8 +15,10 @@ directories.workspace = true
 getrandom.workspace = true
 npw-core = { path = "../npw-core" }
 npw-storage = { path = "../npw-storage" }
+qrcode.workspace = true
 rpassword.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+sha2.workspace = true
 toml.workspace = true
 uuid.workspace = true
