--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ serde_json = "1.0.145"
 sha1 = "0.10.6"
 sha2 = "0.10.9"
 thiserror = "2.0.17"
+time = { version = "0.3.47", features = ["formatting"] }
 toml = "0.9.8"
 unicode-normalization = "0.1.25"
 url = "2.5.8"
