--- a/crates/npw-cli/Cargo.toml
+++ b/crates/npw-cli/Cargo.toml
@@ -20,5 +20,6 @@ rpassword.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 sha2.workspace = true
+time.workspace = true
 toml.workspace = true
 uuid.workspace = true
