feat(security): enforce zxcvbn master password policy

--- a/crates/npw-core/Cargo.toml
+++ b/crates/npw-core/Cargo.toml
@@ -22,3 +22,4 @@ unicode-normalization.workspace = true
 url.workspace = true
 uuid.workspace = true
 zeroize.workspace = true
+zxcvbn.workspace = true
