--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,3 +44,4 @@ unicode-normalization = "0.1.25"
 url = "2.5.8"
 uuid = { version = "1.18.1", features = ["serde", "v4"] }
 zeroize = "1.8.2"
+zxcvbn = "3.1.0"
