feat(desktop): add secure note create and view

--- a/crates/npw-addon/Cargo.toml
+++ b/crates/npw-addon/Cargo.toml
@@ -13,4 +13,5 @@ napi.workspace = true
 napi-derive.workspace = true
 npw-core = { path = "../npw-core" }
 npw-storage = { path = "../npw-storage" }
+uuid.workspace = true
 zeroize.workspace = true
