feat(desktop): export TOTP QR

--- a/crates/npw-addon/Cargo.toml
+++ b/crates/npw-addon/Cargo.toml
@@ -9,9 +9,11 @@ rust-version.workspace = true
 crate-type = ["cdylib"]
 
 [dependencies]
+data-encoding.workspace = true
 napi.workspace = true
 napi-derive.workspace = true
 npw-core = { path = "../npw-core" }
 npw-storage = { path = "../npw-storage" }
+qrcode.workspace = true
 uuid.workspace = true
 zeroize.workspace = true
