feat(config): expose XDG config APIs

--- a/crates/npw-addon/Cargo.toml
+++ b/crates/npw-addon/Cargo.toml
@@ -10,10 +10,13 @@ crate-type = ["cdylib"]
 
 [dependencies]
 data-encoding.workspace = true
+directories.workspace = true
 napi.workspace = true
 napi-derive.workspace = true
 npw-core = { path = "../npw-core" }
 npw-storage = { path = "../npw-storage" }
 qrcode.workspace = true
+serde.workspace = true
+toml.workspace = true
 uuid.workspace = true
 zeroize.workspace = true
