--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -15,7 +15,8 @@
     "check": "pnpm run lint && pnpm run typecheck && pnpm run test"
   },
   "dependencies": {
-    "electron": "^38.7.1"
+    "electron": "^38.7.1",
+    "jsqr": "1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
