--- a/crates/npw-addon/Cargo.toml
+++ b/crates/npw-addon/Cargo.toml
@@ -9,6 +9,7 @@ rust-version.workspace = true
 crate-type = ["cdylib"]
 
 [dependencies]
+csv.workspace = true
 data-encoding.workspace = true
 directories.workspace = true
 getrandom.workspace = true
@@ -18,6 +19,7 @@ npw-core = { path = "../npw-core" }
 npw-storage = { path = "../npw-storage" }
 qrcode.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 toml.workspace = true
 uuid.workspace = true
 zeroize.workspace = true
