--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ fs2 = "0.4.3"
 getrandom = "0.3.4"
 hkdf = "0.12.4"
 hmac = "0.12.1"
+keyring = "3.6.1"
 napi = { version = "3.5.2", default-features = false, features = ["napi6"] }
 napi-derive = "3.3.3"
 qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
