chore(gitignore): ignore Playwright artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ lcov.info
 tarpaulin-report.html
 sbom-npm.cdx.json
 **/sbom-rust.json
+
+# Playwright
+apps/desktop/test-results/
+apps/desktop/playwright-report/
