--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-22.04, macos-latest, windows-latest]
 
     steps:
       - name: Checkout
@@ -50,8 +50,8 @@ jobs:
         run: pnpm run build
 
   coverage:
-    name: Coverage (ubuntu-latest)
-    runs-on: ubuntu-latest
+    name: Coverage (ubuntu-22.04)
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -86,7 +86,7 @@ jobs:
 
   e2e:
     name: E2E (desktop smoke)
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v5
