build(desktop): add electron-builder packaging scaffolding

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "electron",
-      "esbuild"
+      "esbuild",
+      "electron-winstaller"
     ]
   },
   "scripts": {
