--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -8,6 +8,8 @@
     "dev": "vite",
     "build:addon": "node ../../scripts/build-addon.mjs",
     "build": "pnpm run build:addon && vite build && tsc -p tsconfig.electron.json",
+    "dist": "pnpm run build && electron-builder",
+    "dist:dir": "pnpm run build && electron-builder --dir",
     "preview": "vite preview",
     "lint": "eslint .",
     "typecheck": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json && tsc -p tsconfig.electron.json --noEmit",
@@ -24,6 +26,7 @@
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tsconfig/svelte": "^5.0.6",
     "@types/node": "^24.10.1",
+    "electron-builder": "^26.7.0",
     "eslint": "^9.39.1",
     "eslint-plugin-svelte": "^3.13.0",
     "globals": "^16.5.0",
