test: add proptest property tests for O2

--- a/crates/npw-core/Cargo.toml
+++ b/crates/npw-core/Cargo.toml
@@ -23,3 +23,6 @@ url.workspace = true
 uuid.workspace = true
 zeroize.workspace = true
 zxcvbn.workspace = true
+
+[dev-dependencies]
+proptest.workspace = true
