--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,5 +44,6 @@ toml = "0.9.8"
 unicode-normalization = "0.1.25"
 url = "2.5.8"
 uuid = { version = "1.18.1", features = ["serde", "v4"] }
+proptest = "1.10.0"
 zeroize = "1.8.2"
 zxcvbn = "3.1.0"
