--- a/crates/npw-cli/Cargo.toml
+++ b/crates/npw-cli/Cargo.toml
@@ -24,6 +24,9 @@ time.workspace = true
 toml.workspace = true
 uuid.workspace = true
 
+[dev-dependencies]
+proptest.workspace = true
+
 [[bin]]
 name = "npw"
 path = "src/main.rs"
