--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -1,44 +1,50 @@
 {
-  "name": "desktop",
-  "private": true,
-  "version": "0.1.0",
-  "type": "module",
-  "main": "dist-electron/main.js",
-  "scripts": {
-    "dev": "node scripts/dev-electron.js",
-    "dev:web": "vite",
-    "build:addon": "node ../../scripts/build-addon.mjs",
-    "build:addon:release": "node ../../scripts/build-addon.mjs --release",
-    "build": "pnpm run build:addon && vite build && tsc -p tsconfig.electron.json",
-    "build:release": "pnpm run build:addon:release && vite build && tsc -p tsconfig.electron.json",
-    "dist": "pnpm run build:release && electron-builder --publish never",
-    "dist:dir": "pnpm run build:release && electron-builder --dir --publish never",
-    "preview": "vite preview",
-    "lint": "eslint .",
-    "typecheck": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json && tsc -p tsconfig.electron.json --noEmit",
-    "test": "vitest run",
-    "e2e": "playwright test",
-    "check": "pnpm run lint && pnpm run typecheck && pnpm run test"
-  },
-  "dependencies": {
-    "jsqr": "1.4.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@sveltejs/vite-plugin-svelte": "^6.2.1",
-    "@tsconfig/svelte": "^5.0.6",
-    "@types/node": "^24.10.1",
-    "electron": "^38.7.1",
-    "electron-builder": "^26.7.0",
-    "eslint": "^9.39.1",
-    "eslint-plugin-svelte": "^3.13.0",
-    "globals": "^16.5.0",
-    "playwright": "^1.58.1",
-    "svelte": "^5.43.8",
-    "svelte-check": "^4.3.4",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.2",
-    "vite": "^7.2.4",
-    "vitest": "^4.0.8"
-  }
+	"name": "desktop",
+	"private": true,
+	"version": "0.1.0",
+	"type": "module",
+	"main": "dist-electron/main.js",
+	"description": "npw — local-first password manager desktop app",
+	"author": {
+		"name": "Aman Thanvi",
+		"email": "aman_thanvi@outlook.com"
+	},
+	"homepage": "https://github.com/amanthanvi/password-manager",
+	"scripts": {
+		"dev": "node scripts/dev-electron.js",
+		"dev:web": "vite",
+		"build:addon": "node ../../scripts/build-addon.mjs",
+		"build:addon:release": "node ../../scripts/build-addon.mjs --release",
+		"build": "pnpm run build:addon && vite build && tsc -p tsconfig.electron.json",
+		"build:release": "pnpm run build:addon:release && vite build && tsc -p tsconfig.electron.json",
+		"dist": "pnpm run build:release && electron-builder --publish never",
+		"dist:dir": "pnpm run build:release && electron-builder --dir --publish never",
+		"preview": "vite preview",
+		"lint": "eslint .",
+		"typecheck": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json && tsc -p tsconfig.electron.json --noEmit",
+		"test": "vitest run",
+		"e2e": "playwright test",
+		"check": "pnpm run lint && pnpm run typecheck && pnpm run test"
+	},
+	"dependencies": {
+		"jsqr": "1.4.0"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.39.1",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@tsconfig/svelte": "^5.0.6",
+		"@types/node": "^24.10.1",
+		"electron": "^38.7.1",
+		"electron-builder": "^26.7.0",
+		"eslint": "^9.39.1",
+		"eslint-plugin-svelte": "^3.13.0",
+		"globals": "^16.5.0",
+		"playwright": "^1.58.1",
+		"svelte": "^5.43.8",
+		"svelte-check": "^4.3.4",
+		"typescript": "~5.9.3",
+		"typescript-eslint": "^8.46.2",
+		"vite": "^7.2.4",
+		"vitest": "^4.0.8"
+	}
 }
