--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,13 @@ dist-packages/
 .env.*
 apps/desktop/native/*.node
 
+# electron-builder buildResources (tracked)
+!apps/desktop/build/
+apps/desktop/build/*
+!apps/desktop/build/icon.png
+!apps/desktop/build/icon.ico
+!apps/desktop/build/icon.icns
+
 # === btca ===
 # Local resource clones (created on first btca query)
 .btca/
