--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "npw",
   "private": true,
   "version": "0.1.0",
+  "license": "Apache-2.0",
   "packageManager": "pnpm@10.28.2",
   "pnpm": {
     "onlyBuiltDependencies": [
