--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,11 @@ name: Release
 
 on:
   workflow_dispatch:
+    inputs:
+      tag:
+        description: Release tag to upload assets to (e.g. v0.1.0)
+        required: true
+        default: v0.1.0
   release:
     types: [published]
 
@@ -54,10 +59,10 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Verify tag version matches manifests
-        if: github.event_name == 'release'
+        if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
         shell: bash
         run: |
-          TAG="${{ github.event.release.tag_name }}"
+          TAG="${{ github.event.release.tag_name || inputs.tag }}"
           VERSION="${TAG#v}"
           ROOT_VERSION="$(node -e \"console.log(require('./package.json').version)\")"
           DESKTOP_VERSION="$(node -e \"console.log(require('./apps/desktop/package.json').version)\")"
@@ -120,10 +125,16 @@ jobs:
           find . -type f -print0 | sort -z | xargs -0 sha256sum > SHA256SUMS.txt
 
       - name: Sign checksums (optional)
-        if: ${{ secrets.NPW_GPG_PRIVATE_KEY != '' && secrets.NPW_GPG_PASSPHRASE != '' }}
+        env:
+          NPW_GPG_PRIVATE_KEY: ${{ secrets.NPW_GPG_PRIVATE_KEY }}
+          NPW_GPG_PASSPHRASE: ${{ secrets.NPW_GPG_PASSPHRASE }}
         run: |
-          echo "${{ secrets.NPW_GPG_PRIVATE_KEY }}" | gpg --batch --import
-          gpg --batch --yes --pinentry-mode loopback --passphrase "${{ secrets.NPW_GPG_PASSPHRASE }}" --armor --detach-sign dist/release/SHA256SUMS.txt
+          if [ -z "${NPW_GPG_PRIVATE_KEY:-}" ] || [ -z "${NPW_GPG_PASSPHRASE:-}" ]; then
+            echo "Skipping checksums signing; NPW_GPG_* secrets not configured."
+            exit 0
+          fi
+          echo "$NPW_GPG_PRIVATE_KEY" | gpg --batch --import
+          gpg --batch --yes --pinentry-mode loopback --passphrase "$NPW_GPG_PASSPHRASE" --armor --detach-sign dist/release/SHA256SUMS.txt
 
       - name: Upload checksums artifact
         uses: actions/upload-artifact@v4
@@ -132,9 +143,10 @@ jobs:
           path: dist/release/SHA256SUMS.txt*
 
       - name: Upload assets to GitHub release
-        if: github.event_name == 'release'
+        if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ github.event.release.tag_name || inputs.tag }}
           files: |
             dist/release/**/*
             dist/release/SHA256SUMS.txt
