--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-node@v5
         with:
           node-version: 23
+          package-manager-cache: false
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
