--- a/crates/npw-addon/Cargo.toml
+++ b/crates/npw-addon/Cargo.toml
@@ -8,6 +8,9 @@ rust-version.workspace = true
 [lib]
 crate-type = ["cdylib"]
 
+[build-dependencies]
+napi-build = "2.3.1"
+
 [dependencies]
 csv.workspace = true
 data-encoding.workspace = true
