--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -24,7 +24,7 @@
 		"lint": "eslint .",
 		"typecheck": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json && tsc -p tsconfig.electron.json --noEmit",
 		"test": "vitest run",
-		"e2e": "playwright test",
+		"e2e": "pnpm run build && playwright test",
 		"check": "pnpm run lint && pnpm run typecheck && pnpm run test"
 	},
 	"dependencies": {
